--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Weather Forecast by SagarYT</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="favicon1.png">
         <link rel="stylesheet" href="style.css">
 </head>
 
